--- a/user/templates/change_password.html
+++ b/user/templates/change_password.html
@@ -15,21 +15,21 @@
 <!--/ Intro Single star /-->
 <section class="intro-single">
     <div class="container">
-        <div class="row">
-            <div class="col-md-12 col-lg-8">
-                <div class="title-single-box">
-                    <h1 class="title-single">{{ user.first_name }} {{ user.last_name }}</h1>
-                    <span class="color-text-a">
-                <button class="btn btn-primary"><a href="/user/update">Update Profile</a></button>
-            <button class="btn btn-primary"><a href="/user/password">Change Password</a></button>
-            </span>
-                </div>
-            </div>
+        <div class="row" style="display:flex; align-items:center">
             <div class="col-md-12 col-lg-4">
+                <h3 class="title-d">{{ user.first_name }} {{ user.last_name }}</h3>
+            </div>
+            <div class="col-md-12 col-lg-8">
                 <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item">
                             <a href="/user">Profilim</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="/user/update">Güncelle</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="/user/password">Şifre</a>
                         </li>
                         <li class="breadcrumb-item">
                             <a href="/user/reserve">Rezervasyonlarım</a>
@@ -73,7 +73,7 @@
                     {% endfor %}
                     </p>
                     {% endfor %}
-                    <button class="primary-btn" type="submit">Save changes</button>
+                    <button class="btn btn-primary" type="submit">Save changes</button>
                 </form>
             </div>
         </div>
