--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -35,7 +35,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8" style="padding-top: 100px;">
+            <div class="col-md-3"></div>
+            <div class="col-md-6" style="padding-top: 100px;">
                 {% if messages %}
                 {% for message in messages %}
                 <div class="alert alert-{{message.tags}}" role="alert">
@@ -57,7 +58,7 @@
                     {% endfor %}
                     </p>
                     {% endfor %}
-                    <button type="submit">Kayıt Ol</button>
+                    <button type="submit" class="btn btn-primary">Kayıt Ol</button>
                 </form>
             </div>
         </div>
