--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -17,9 +17,6 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-lg-8">
-                <div class="title-single-box">
-                    <span class="color-text-a">{{ setting.contact | safe }}</span>
-                </div>
             </div>
             <div class="col-md-12 col-lg-4">
                 <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
@@ -33,6 +30,12 @@
                     </ol>
                 </nav>
             </div>
+        </div>
+        <div class="row">
+
+                <div class="title-single-box">
+                    <span class="color-text-a">{{ setting.contact | safe }}</span>
+                </div>
         </div>
     </div>
 </section>
@@ -72,7 +75,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </section>
 <!--/ Contact End /-->
