--- a/home/templates/hakkimizda.html
+++ b/home/templates/hakkimizda.html
@@ -17,17 +17,17 @@
         <div class="row">
             <div class="col-md-12 col-lg-8">
                 <div class="title-single-box">
-                    <h1 class="title-single">We Do Great Design For Creative Folks</h1>
+                    <h1 class="title-single">Hakkımızda</h1>
                 </div>
             </div>
             <div class="col-md-12 col-lg-4">
                 <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item">
-                            <a href="#">Home</a>
+                            <a href="/">Anasayfa</a>
                         </li>
                         <li aria-current="page" class="breadcrumb-item active">
-                            About
+                            Hakkımızda
                         </li>
                     </ol>
                 </nav>
@@ -46,10 +46,10 @@
                     <img alt="" class="img-fluid" src="{% static 'img/slide-about-1.jpg' %}">
                 </div>
                 <div class="sinse-box">
-                    <h3 class="sinse-title">EstateAgency
-                        <span></span>
-                        <br> Sinse 2017</h3>
-                    <p>Art & Creative</p>
+                    <h3 class="sinse-title">
+                        Hotel
+                        <br> Reservation
+                    </h3>
                 </div>
             </div>
             <div class="col-md-12 section-t8">
@@ -57,15 +57,7 @@
                     <div class="col-md-6 col-lg-5">
                         <img alt="" class="img-fluid" src="{% static 'img/about-2.jpg' %}">
                     </div>
-                    <div class="col-lg-2  d-none d-lg-block">
-                        <div class="title-vertical d-flex justify-content-start">
-                            <span>EstateAgency Exclusive Property</span>
-                        </div>
-                    </div>
                     <div class="col-md-6 col-lg-5 section-md-t3">
-                        <div class="title-box-d">
-                            <h3 class="title-d">Hakkımızda</h3>
-                        </div>
                         <p class="color-text-a">
                             {{ setting.aboutus |safe }}
                         </p>
