--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -334,8 +334,7 @@
                         <ul class="list-unstyled">
                             {% recursetree category %}
                             <li class="item-list-a">
-                                <i class="fa fa-angle-right"></i> <a href="/category/{{ node.id }}/{{ node.slug }}">{{
-                                node.title}}</a>
+                                <i class="fa fa-angle-right"></i> <a href="/category/{{ node.id }}/{{ node.slug }}">{{ node.title}}</a>
                             </li>
                             {% endrecursetree %}
                         </ul>
