fix: meta tags and missing images

--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>{% block title %}{{ setting.title }}{% endblock %}</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="{% block keywords %}{{ setting.keywords }}{% endblock %}" name="keywords">
+    <meta content="{% block description %}{{ setting.description }}{% endblock %}" name="description">
 
     <!-- Favicons -->
     <link href="{% static 'img/favicon.png' %}" rel="icon">
