--- a/home/templates/hotel_detail.html
+++ b/home/templates/hotel_detail.html
@@ -1,8 +1,8 @@
 {% extends 'homebase.html' %}
 {% load static %}
-{% block title %} {{ hotel.title }} | {{ setting.title }} {% endblock %}
-{% block description %} {{ setting.description }} {% endblock %}
-{% block keywords %} {{ setting.keywords }} {% endblock %}
+{% block title %}{{ hotel.title }} | {{ setting.title }}{% endblock %}
+{% block description %}{{ hotel.description }}{% endblock %}
+{% block keywords %}{{ hotel.keywords }}{% endblock %}
 
 {% block head %}
 <link href='{{ setting.icon.url }}' rel='shortcut icon' type='image/x-icon'/>
