--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'homebase.html' %}
 
 {% block title %} Ana Sayfa | {{ setting.title}}{% endblock %}
-{% block description %}  {% endblock %}
-{% block keywords %} {% endblock %}
+{% block description %}{{ setting.description}}{% endblock %}
+{% block keywords %}{{ setting.keywords}}{% endblock %}
 
 {% block head %}
 <link href='{{ setting.icon.url }}' rel='shortcut icon' type='image/x-icon'/>
