--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -23,13 +23,13 @@
                 <div class="card-box-a card-shadow">
                     <div class="img-box-a">
                         <img alt="" class="img-a img-fluid" src="{{ rs.image.url }}"
-                             style="width: 600px; height: 400px;">
+                             style="width: 600px; height: 400px; object-fit: cover">
                     </div>
                     <div class="card-overlay">
                         <div class="card-overlay-a-content">
                             <div class="card-header-a">
                                 <h2 class="card-title-a">
-                                    <a href="property-single.html">{{ rs.title }}</a>
+                                    <a href="/hotel/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a>
                                 </h2>
                             </div>
                             <div class="card-body-a">
@@ -87,7 +87,7 @@
                     <div class="card-box-a card-shadow">
                         <div class="img-box-a">
                             <img alt="" class="img-a img-fluid" src="{{ rs.image.url }}"
-                                 style="width: 800px; height: 400px;">
+                                 style="width: 800px; height: 400px;object-fit: cover">
                         </div>
                         <div class="card-overlay">
                             <div class="card-overlay-a-content">
@@ -153,7 +153,7 @@
                     <div class="card-box-a card-shadow">
                         <div class="img-box-a">
                             <img alt="" class="img-a img-fluid" src="{{ rs.image.url }}"
-                                 style="width: 800px; height: 400px;">
+                                 style="width: 800px; height: 400px;object-fit: cover;">
                         </div>
                         <div class="card-overlay">
                             <div class="card-overlay-a-content">
@@ -219,7 +219,7 @@
                     <div class="card-box-a card-shadow">
                         <div class="img-box-a">
                             <img alt="" class="img-a img-fluid" src="{{ rs.image.url }}"
-                                 style="width: 800px; height: 400px;">
+                                 style="width: 800px; height: 400px;object-fit: cover;">
                         </div>
                         <div class="card-overlay">
                             <div class="card-overlay-a-content">
