--- a/home/templates/hotels.html
+++ b/home/templates/hotels.html
@@ -58,7 +58,7 @@
                     <div class="card-box-a card-shadow">
                         <div class="img-box-a">
                             <img alt="" class="img-a img-fluid" src="{{ rs.image.url }}"
-                                 style="width: 800px; height: 400px;">
+                                 style="width: 800px; height: 400px; object-fit: cover">
                         </div>
                         <div class="card-overlay">
                             <div class="card-overlay-a-content">
